# dj_shop_v_0.1

./: .gitignore  README.md  pyproject.toml
about_us/: admin.py  models.py  urls.py  views.py
about_us/migrations/: 0001_initial.py
about_us/static/about_us/css/: about_us.css
about_us/static/about_us/js/: about_us.js
about_us/templates/about_us/: about_us.html
conf/: settings.py  urls.py
mainpage/: urls.py  views.py
mainpage/static/mainpage/css/: main_page.css
mainpage/static/mainpage/js/: main_page.js
mainpage/templates/mainpage/: base.html  main_page.html
