[tool.poetry]
name = "dj-shop-v-0-1"
version = "0.1.0"
description = ""
authors = ["zxc_322 <kvasoliaeww@gmail.com>"]
readme = "README.md"
packages = [{include = "dj_shop_v_0"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
